# io_uring_example

./: README.md  readme
glibc/src/: Makeconfig  Makerules
glibc/src/io/: Makefile
glibc/src/sysdeps/unix/sysv/linux/: close.c  fsync.c  io_uring_backed_io.c  io_uring_backed_io.h  open64.c  read.c  write.c
install_instructions/: install-liburing.sh  source.txt
libmonkey/: monkey.cpp  monkey.h
read_example/: CMakeLists.txt  main.c
sample_program/: Makefile  main.c  sample.txt
test-monkey/: Makefile  monkey.cpp  read-write.c  read-write.cpp
